force-app/main/default/objects/Contest__c/Contest__c.object-meta.xml
<CustomObject>
    <label>Contest</label>
    <nameField>
        <label>Contest Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>