force-app/main/default/objects/Contest__c/fields/Banner_Image__c.field-meta.xml
<CustomField>
    <fullName>Banner_Image__c</fullName>
    <label>Banner Image</label>
    <required>true</required>
    <type>Url</type>
</CustomField>