force-app/main/default/objects/Contest__c/fields/Date_Status__c.field-meta.xml
<CustomField>
    <fullName>Date_Status__c</fullName>
    <formula>if(
  and (Start_Accepting_Entries__c &lt; NOW(), NOW()&lt; Stop_Accepting_Entries__c),
  &quot;open&quot;,
  if ( 
    Start_Accepting_Entries__c &gt; NOW(), 
    &quot;not yet&quot;,
    if ( 
      Stop_Accepting_Entries__c &gt; NOW(),
      &quot;too late&quot;,
      &quot;huh&quot;
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Status</label>
    <type>Text</type>
</CustomField>