force-app/main/default/objects/Contest__c/fields/Externally_visible__c.field-meta.xml
<CustomField>
    <fullName>Externally_visible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Externally visible</label>
    <type>Checkbox</type>
</CustomField>