force-app/main/default/objects/Contest__c/fields/Planned_Drawing_Time__c.field-meta.xml
<CustomField>
    <fullName>Planned_Drawing_Time__c</fullName>
    <label>Planned Drawing Time</label>
    <type>DateTime</type>
</CustomField>