force-app/main/default/objects/Contest__c/fields/Rules__c.field-meta.xml
<CustomField>
    <fullName>Rules__c</fullName>
    <label>Rules</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>