force-app/main/default/objects/Contest__c/fields/Rules_URL__c.field-meta.xml
<CustomField>
    <fullName>Rules_URL__c</fullName>
    <label>Rules URL</label>
    <type>Url</type>
</CustomField>