force-app/main/default/objects/Contest__c/fields/Stop_Accepting_Entries__c.field-meta.xml
<CustomField>
    <fullName>Stop_Accepting_Entries__c</fullName>
    <label>Stop Accepting Entries</label>
    <type>DateTime</type>
</CustomField>