force-app/main/default/objects/Contest__c/fields/Total_Prize_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Prize_Value__c</fullName>
    <label>Total Prize Value</label>
    <summarizedField>Prize__c.Total_Value__c</summarizedField>
    <summaryForeignKey>Prize__c.Contest__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>