force-app/main/default/objects/Contest__c/fields/Total_Prizes__c.field-meta.xml
<CustomField>
    <fullName>Total_Prizes__c</fullName>
    <label>Total Prizes</label>
    <summarizedField>Prize__c.Quantity__c</summarizedField>
    <summaryForeignKey>Prize__c.Contest__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>